--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "202210-w4ch4-saraflores-",
+    "name": "week4.todo",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -7,11 +7,15 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.2",
-        "@types/react": "^18.0.24",
-        "@types/react-dom": "^18.0.8",
+        "@types/node": "^16.18.0",
+        "@types/react": "^18.0.23",
+        "@types/react-dom": "^18.0.7",
+        "@typescript-eslint/eslint-plugin": "^5.41.0",
+        "@typescript-eslint/parser": "^5.41.0",
+        "eslint-config-prettier": "^8.5.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
@@ -20,13 +24,28 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
+        "test:all": "react-scripts test --watchAll --collect-coverage",
+        "test:prod": "react-scripts test --watchAll --collect-coverage --watchAll=false",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": [
             "react-app",
-            "react-app/jest"
+            "react-app/jest",
+            "plugin:@typescript-eslint/recommended",
+            "prettier"
+        ],
+        "parser": "@typescript-eslint/parser",
+        "parserOptions": {
+            "ecmaVersion": "latest",
+            "sourceType": "module"
+        },
+        "plugins": [
+            "@typescript-eslint"
         ]
+    },
+    "prettier": {
+        "singleQuote": true
     },
     "browserslist": {
         "production": [
@@ -39,9 +58,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "eclint": "^2.8.1",
-        "eslint-config-prettier": "^8.5.0"
     }
 }
