--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "@types/react-dom": "^18.0.7",
         "@typescript-eslint/eslint-plugin": "^5.41.0",
         "@typescript-eslint/parser": "^5.41.0",
-        "eslint-config-prettier": "^8.5.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.2",
@@ -58,5 +57,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "eslint-config-prettier": "^8.5.0"
     }
 }
